--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=garage_system
+# H2
+spring.h2.console.enabled=true
+# Datasource
+spring.datasource.url=jdbc:h2:file:./Database
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
